[gd_scene load_steps=2 format=2]

[ext_resource path="res://screens/gui/settings.gd" type="Script" id=1]

[node name="Settings" type="HSplitContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Tree" type="Tree" parent="."]
margin_right = 1.0
margin_bottom = 900.0

[node name="General" type="ScrollContainer" parent="."]
visible = false
margin_left = 13.0
margin_right = 1600.0
margin_bottom = 900.0

[node name="VBoxContainer" type="VBoxContainer" parent="General"]
margin_right = 1587.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="SkipSplashScreen" type="CheckButton" parent="General/VBoxContainer"]
margin_right = 1587.0
margin_bottom = 40.0
text = "Skip splash screen"

[node name="Rendering" type="ScrollContainer" parent="."]
margin_left = 13.0
margin_right = 1600.0
margin_bottom = 900.0

[node name="VBoxContainer" type="VBoxContainer" parent="Rendering"]
margin_right = 1587.0
margin_bottom = 108.0
size_flags_horizontal = 3

[node name="TransparentBackground" type="CheckButton" parent="Rendering/VBoxContainer"]
margin_right = 1587.0
margin_bottom = 40.0
text = "Transparent background"

[node name="UseFxaa" type="CheckButton" parent="Rendering/VBoxContainer"]
margin_top = 44.0
margin_right = 1587.0
margin_bottom = 84.0
text = "Use FXAA"

[node name="Msaa" type="HBoxContainer" parent="Rendering/VBoxContainer"]
margin_top = 88.0
margin_right = 1587.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="Rendering/VBoxContainer/Msaa"]
margin_top = 3.0
margin_right = 791.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "MSAA"

[node name="OptionButton" type="OptionButton" parent="Rendering/VBoxContainer/Msaa"]
margin_left = 795.0
margin_right = 1587.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Disabled"
items = [ "Disabled", null, false, 0, null, "MSAA 2X", null, false, 1, null, "MSAA 4X", null, false, 2, null, "MSAA 8X", null, false, 3, null, "MSAA 16X", null, false, 4, null ]
selected = 0

[node name="Linux" type="ScrollContainer" parent="."]
visible = false
margin_left = 13.0
margin_right = 1600.0
margin_bottom = 900.0

[node name="VBoxContainer" type="VBoxContainer" parent="Linux"]
margin_right = 1587.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="PythonPath" type="HBoxContainer" parent="Linux/VBoxContainer"]
margin_right = 1587.0
margin_bottom = 24.0
hint_tooltip = "Path to a custom python executable. Not always necessary"

[node name="Label" type="Label" parent="Linux/VBoxContainer/PythonPath"]
margin_top = 5.0
margin_right = 791.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Python path"

[node name="LineEdit" type="LineEdit" parent="Linux/VBoxContainer/PythonPath"]
margin_left = 795.0
margin_right = 1587.0
margin_bottom = 24.0
size_flags_horizontal = 3
